# ClickMD

./: .gitignore  LICENSE  MANIFEST.in  README.md  ROADMAP.md  environment.yml  pyproject.toml  setup.py
clickmd/: __init__.py  cli.py  main.py
clickmd/core/: __init__.py
clickmd/gui/: __init__.py  main_window.py
clickmd/utils/: __init__.py
docs/: API.md  DEVELOPER_GUIDE.md  INSTALLATION.md  USER_GUIDE.md
examples/: configs.md
examples/molecules/: README.md
tests/: __init__.py  conftest.py  test_core.py  test_gui.py  test_integration.py
